Fixed responsiveness for all pages on tablet

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1207,14 +1207,14 @@ textarea {
 @media (min-width: 768px) {
 
     .btn {
-        font-size: 1.8rem;
+        font-size: 1.3rem;
     }
 
     /* Index */
     .home-info {
         padding-left: 0rem;
         height: 26rem;
-        padding-top: 3rem;
+        padding-top: 1rem;
     }
 
     .cards-holder, .panel-holder {
